<resources>
    <string name="app_name">Teta Concept</string>
    <string name="slogan">Plus q\'une application..</string>
    <string name="copiright1">Copyright (c) </string>
    <string name="copiright2">. All rights reserved.</string>
    <string name="skip_presentation">Passer</string>
    <string name="start_button">Se commencer</string>
    <string name="before_presentation">précédent</string>
    <string name="next_presentation">Suivant</string>
    <string name="retour_impossible">Vous ne pouvez pas revenir à la page précédente.</string>
    <string name="notificatuons">Notifications</string>
    <string name="desc_notifications">Recevoir des notifications indiquant l\'etat du système.</string>
    <string name="temps">Temps</string>
    <string name="desc_temps">Saisir le temps de démarrage requis pour le système.</string>
    <string name="titre_choix_actions">Gérer \n le système interne</string>
    <string name="text_choix_action">Nous assurons les meilleures services pour vous.</string>
    <string name="saisir">Saisir le temps</string>
    <string name="demarer">Démarrer</string>
    <string name="des_saisir_temps">Veuillez entrer le temps de démarrage du système pour que le système démarre correctement..</string>
    <string name="confirmer">Confirmer</string>
    <string name="time">Temps en secondes</string>
    <string name="time_hint">Saisir le temps en seconde..</string>
</resources>