<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:padding="20dp"
    tools:context=".Activities.PresentationActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent_color"
        android:drawableEnd="@drawable/skip"
        android:text="@string/skip_presentation"
        android:textAllCaps="false"
        android:textColor="@color/black_color"
        android:drawableTint="@color/black_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_presentation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/skip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/commencer_presentation"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/commencer_presentation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:background="@color/blue_color"
        android:textColor="@color/white_color"
        android:textAllCaps="true"
        android:visibility="invisible"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/constraint_layout_presentation"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_presentation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:background="@color/transparent_color"
            android:drawableStart="@drawable/pred"
            android:text="@string/before_presentation"
            android:textColor="@color/black_color"
            android:gravity="center"
            android:visibility="invisible"
            android:textAllCaps="false"
            android:drawableTint="@color/black_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            app:tabBackground="@drawable/indicateur_selector"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/before"
            app:layout_constraintEnd_toStartOf="@id/next"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:background="@color/transparent_color"
            android:drawableEnd="@drawable/next"
            android:text="@string/next_presentation"
            android:textColor="@color/black_color"
            android:gravity="center"
            android:visibility="visible"
            android:textAllCaps="false"
            android:drawableTint="@color/black_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
