<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:fillViewport="true"
    android:background="@color/white_color"
    tools:context=".Activities.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_app"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/title_choix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_choix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titre_choix_actions"
            android:textSize="26sp"
            android:textColor="@color/blue_color"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginBottom="13dp"
            app:layout_constraintTop_toBottomOf="@id/logo_app"
            app:layout_constraintBottom_toTopOf="@id/text_choix"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_choix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_choix_action"
            android:textColor="@color/black_color"
            android:gravity="center"
            android:textStyle="normal"
            android:textSize="14sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@id/btn_temps"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_temps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saisir"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:clickable="true"
            android:background="@drawable/button_choix"
            android:textColor="@color/white_color"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_choix"/>

        <TextView
            android:id="@+id/copyright_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black_color"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>