<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:fillViewport="true"
    tools:context=".Activities.SaisirTempsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/image_temps"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:src="@drawable/systeme"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title_temps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:text="@string/saisir"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/black_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_temps" />

        <TextView
            android:id="@+id/description_saisir_temps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/des_saisir_temps"
            android:textSize="14sp"
            android:textColor="@color/black_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_temps" />

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_saisir_temps">

            <TextView
                android:id="@+id/temps_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/grise_color"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@null"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false"
                android:layout_marginTop="20dp"
                android:layout_below="@id/temps_desc"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/time_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    android:background="@drawable/input_rectangle"
                    android:textColor="@color/grise_color"
                    android:inputType="number"
                    android:textSize="15sp"
                    style="@style/Widget.AppCompat.EditText"
                    android:drawablePadding="10dp"
                    android:hint="@string/time_hint"
                    android:textColorHint="@color/grise_color"
                    android:drawableStart="@drawable/time"
                    android:drawableTint="@color/grise_color"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@null"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/temps_erreur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/design_default_color_error"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relative_layout"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/demarrer_temps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmer"
            android:background="@drawable/button_round"
            android:textColor="@color/white_color"
            android:textAllCaps="true"
            android:visibility="visible"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:padding="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temps_erreur"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>